[package]
name = "phpmyadmin-bruteforce"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version="3.1.18", features=["derive"]}
lazy_static = "1.4.0"
regex = "1.5.5"
anyhow = "1.0"
rayon = "1.5"
reqwest = {version="0.11", features=["blocking", "cookies", "json"]}
serde = "1.0"
num_cpus = "1.13"